--- a/bienvenido/canaima-bienvenido-gnome-4.7/.pc/Darwin-Leonardo-canaima-apure/gui/data/shell/01.html
+++ b/bienvenido/canaima-bienvenido-gnome-4.7/.pc/Darwin-Leonardo-canaima-apure/gui/data/shell/01.html
@@ -2,7 +2,7 @@
     <div style="display: block;" id="welcome">
         <div style="left: 20px; top: 30px; display: block; width: 720px; height: 549px;" id="welcome-screen" class="selected-window">	
 	      <div class="welcome-header">
-                  <h1>¡Bienvenido a Canaima Apure 4.0!</h1>
+                  <h1>¡Bienvenido a Canaima 4.0!</h1>
              </div><!-- welcome-header -->
              <div class="answer-screen" >
                    <div id="answer">
